# wpi-greenboard

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.app  README.md  compose.dev.yml  compose.yml  dev.sh  docker.sh  emissions_data.csv  package_data.csv  pyproject.toml  report.csv  tracking.py  transaction_data.csv
database/: init.sql
scripts/: populate_db.py
src/greenboard/: main.py
src/greenboard/api/: database.py  main.py  models.py  packages.py
src/greenboard/api/routes/: database.py  emissions.py  leaderboards.py  packages.py  timelines.py
src/greenboard/emissions/: csv_batch_processor.py  emissions_calculator.py  emissions_config.py
src/greenboard/ui/: main.py
src/greenboard/ui/pages/: details.py  leaderboard.py  timeline.py  view_pages.py  view_tables.py
