[project]
name = "wpi-greenboard"
version = "0.1.0"
description = "Carbon Emissions Leaderboard for WPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.27",
    "streamlit[charts]>=1.49.1",
    "uvicorn>=0.37.0",
]
